Finish task two: 2_fullyconnected.ipynb

--- a/2_fullyconnected.ipynb
+++ b/2_fullyconnected.ipynb
@@ -445,7 +445,7 @@
     "\n",
     "The graph will be similar, except that instead of holding all the training data into a constant node, we create a `Placeholder` node which will be fed actual data at every call of `session.run()`.\n",
     "\n",
-    "使用`Placeholder`进行批梯度下降。"
+    "使用`Placeholder`进行随机梯度下降。"
    ]
   },
   {
@@ -615,7 +615,126 @@
     "\n",
     "Turn the logistic regression example with SGD into a 1-hidden layer neural network with rectified linear units [nn.relu()](https://www.tensorflow.org/versions/r0.7/api_docs/python/nn.html#relu) and 1024 hidden nodes. This model should improve your validation / test accuracy.\n",
     "\n",
-    "---"
+    "\n",
+    "使用relu作为隐藏层，隐藏层节点个数为1024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "def forward_propagation(features, weights, biases):\n",
+    "  hidden_layer = tf.add(tf.matmul(features, weights[0]), biases[0])\n",
+    "  hidden_layer = tf.nn.relu(hidden_layer)    \n",
+    "  logits = tf.matmul(hidden_layer, weights[1]) + biases[1]\n",
+    "  return logits\n",
+    "\n",
+    "\n",
+    "batch_size = 128\n",
+    "hidden_nodes_num = 1024\n",
+    "graph = tf.Graph()\n",
+    "with graph.as_default():\n",
+    "\n",
+    "  # Input data. For the training data, we use a placeholder that will be fed\n",
+    "  # at run time with a training minibatch.\n",
+    "  tf_train_dataset = tf.placeholder(tf.float32,\n",
+    "                                    shape=(batch_size, image_size * image_size))\n",
+    "  tf_train_labels = tf.placeholder(tf.float32, shape=(batch_size, num_labels))\n",
+    "  tf_valid_dataset = tf.constant(valid_dataset)\n",
+    "  tf_test_dataset = tf.constant(test_dataset)\n",
+    "  \n",
+    "  # Variables.\n",
+    "\n",
+    "  hidden_layer_weights = tf.Variable(\n",
+    "    tf.truncated_normal([image_size * image_size, hidden_nodes_num]))\n",
+    "  hidden_layer_biases = tf.Variable(tf.zeros([hidden_nodes_num]))\n",
+    "\n",
+    "  out_weights = tf.Variable(\n",
+    "    tf.truncated_normal([hidden_nodes_num, num_labels]))\n",
+    "  out_biases = tf.Variable(tf.zeros([num_labels]))\n",
+    "\n",
+    "  # Weights and biases\n",
+    "  weights = [hidden_layer_weights, out_weights]\n",
+    "  biases = [hidden_layer_biases, out_biases]\n",
+    "  \n",
+    "  # Training computation.\n",
+    "  logits = forward_propagation(tf_train_dataset, weights, biases)\n",
+    "  loss = tf.reduce_mean(\n",
+    "    tf.nn.softmax_cross_entropy_with_logits(labels=tf_train_labels, logits=logits))\n",
+    "  \n",
+    "  # Optimizer.\n",
+    "  optimizer = tf.train.GradientDescentOptimizer(0.5).minimize(loss)\n",
+    "  \n",
+    "  # Predictions for the training, validation, and test data.\n",
+    "  train_prediction = tf.nn.softmax(logits)\n",
+    "  valid_prediction = tf.nn.softmax(forward_propagation(tf_valid_dataset, weights, biases))\n",
+    "  test_prediction = tf.nn.softmax(forward_propagation(tf_test_dataset, weights, biases))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialized\n",
+      "Minibatch loss at step 0: 326.102173\n",
+      "Minibatch accuracy: 13.3%\n",
+      "Validation accuracy: 25.8%\n",
+      "Minibatch loss at step 500: 11.513082\n",
+      "Minibatch accuracy: 84.4%\n",
+      "Validation accuracy: 79.7%\n",
+      "Minibatch loss at step 1000: 14.772697\n",
+      "Minibatch accuracy: 79.7%\n",
+      "Validation accuracy: 79.0%\n",
+      "Minibatch loss at step 1500: 8.682803\n",
+      "Minibatch accuracy: 75.8%\n",
+      "Validation accuracy: 79.2%\n",
+      "Minibatch loss at step 2000: 3.155649\n",
+      "Minibatch accuracy: 83.6%\n",
+      "Validation accuracy: 82.5%\n",
+      "Minibatch loss at step 2500: 4.736589\n",
+      "Minibatch accuracy: 83.6%\n",
+      "Validation accuracy: 80.6%\n",
+      "Minibatch loss at step 3000: 5.581108\n",
+      "Minibatch accuracy: 85.2%\n",
+      "Validation accuracy: 82.1%\n",
+      "Test accuracy: 88.9%\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_steps = 3001\n",
+    "\n",
+    "with tf.Session(graph=graph) as session:\n",
+    "  tf.global_variables_initializer().run()\n",
+    "  print(\"Initialized\")\n",
+    "  for step in range(num_steps):\n",
+    "    # Pick an offset within the training data, which has been randomized.\n",
+    "    # Note: we could use better randomization across epochs.\n",
+    "    offset = (step * batch_size) % (train_labels.shape[0] - batch_size)\n",
+    "    # Generate a minibatch.\n",
+    "    batch_data = train_dataset[offset:(offset + batch_size), :]\n",
+    "    batch_labels = train_labels[offset:(offset + batch_size), :]\n",
+    "    # Prepare a dictionary telling the session where to feed the minibatch.\n",
+    "    # The key of the dictionary is the placeholder node of the graph to be fed,\n",
+    "    # and the value is the numpy array to feed to it.\n",
+    "    feed_dict = {tf_train_dataset : batch_data, tf_train_labels : batch_labels}\n",
+    "    _, l, predictions = session.run(\n",
+    "      [optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
+    "    if (step % 500 == 0):\n",
+    "      print(\"Minibatch loss at step %d: %f\" % (step, l))\n",
+    "      print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
+    "      print(\"Validation accuracy: %.1f%%\" % accuracy(\n",
+    "        valid_prediction.eval(), valid_labels))\n",
+    "  print(\"Test accuracy: %.1f%%\" % accuracy(test_prediction.eval(), test_labels))"
    ]
   }
  ],
