--- a/3_regularization.ipynb
+++ b/3_regularization.ipynb
@@ -234,7 +234,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def forward_propagation(features, weights, biases):\n",
@@ -601,6 +603,19 @@
     "    optimizer = tf.train.GradientDescentOptimizer(learning_rate).minimize(loss, global_step=global_step)\n",
     " \n",
     " ---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Network Architecture \n",
+    "\n",
+    "input layer: 28 * 28\n",
+    "hidden layers: 1024-300-50\n",
+    "output layer: 10\n",
+    "learning rate: linear decay of the learning rate or tf.train.exponential_decay\n",
+    "dropout keep prob: 0.5  "
    ]
   }
  ],
