Finish task 3: 3_regularization.ipynb

--- a/3_regularization.ipynb
+++ b/3_regularization.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -302,28 +302,28 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Minibatch loss at step 0: 3435.180420\n",
-      "Minibatch accuracy: 7.0%\n",
-      "Validation accuracy: 33.9%\n",
-      "Minibatch loss at step 500: 21.275702\n",
-      "Minibatch accuracy: 85.2%\n",
-      "Validation accuracy: 84.4%\n",
-      "Minibatch loss at step 1000: 0.796504\n",
-      "Minibatch accuracy: 85.9%\n",
-      "Validation accuracy: 83.6%\n",
-      "Minibatch loss at step 1500: 0.799122\n",
-      "Minibatch accuracy: 81.2%\n",
-      "Validation accuracy: 83.6%\n",
-      "Minibatch loss at step 2000: 0.726605\n",
+      "Minibatch loss at step 0: 3633.210693\n",
+      "Minibatch accuracy: 7.8%\n",
+      "Validation accuracy: 32.9%\n",
+      "Minibatch loss at step 500: 21.249147\n",
       "Minibatch accuracy: 86.7%\n",
+      "Validation accuracy: 84.3%\n",
+      "Minibatch loss at step 1000: 0.789106\n",
+      "Minibatch accuracy: 85.2%\n",
+      "Validation accuracy: 83.7%\n",
+      "Minibatch loss at step 1500: 0.791339\n",
+      "Minibatch accuracy: 80.5%\n",
       "Validation accuracy: 83.5%\n",
-      "Minibatch loss at step 2500: 0.597418\n",
-      "Minibatch accuracy: 87.5%\n",
+      "Minibatch loss at step 2000: 0.722039\n",
+      "Minibatch accuracy: 86.7%\n",
+      "Validation accuracy: 83.4%\n",
+      "Minibatch loss at step 2500: 0.602262\n",
+      "Minibatch accuracy: 88.3%\n",
       "Validation accuracy: 83.5%\n",
-      "Minibatch loss at step 3000: 0.693392\n",
-      "Minibatch accuracy: 87.5%\n",
+      "Minibatch loss at step 3000: 0.691497\n",
+      "Minibatch accuracy: 86.7%\n",
       "Validation accuracy: 83.3%\n",
-      "Test accuracy: 90.0%\n"
+      "Test accuracy: 89.9%\n"
      ]
     }
    ],
@@ -336,6 +336,7 @@
     "  for step in range(num_steps):\n",
     "    # Pick an offset within the training data, which has been randomized.\n",
     "    # Note: we could use better randomization across epochs.\n",
+    "    \n",
     "    offset = (step * batch_size) % (train_labels.shape[0] - batch_size)\n",
     "    # Generate a minibatch.\n",
     "    batch_data = train_dataset[offset:(offset + batch_size), :]\n",
@@ -371,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -379,28 +380,28 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Minibatch loss at step 0: 3535.855469\n",
-      "Minibatch accuracy: 3.9%\n",
-      "Validation accuracy: 35.8%\n",
-      "Minibatch loss at step 500: 21.140062\n",
+      "Minibatch loss at step 0: 3501.808594\n",
+      "Minibatch accuracy: 13.3%\n",
+      "Validation accuracy: 23.4%\n",
+      "Minibatch loss at step 500: 21.137032\n",
       "Minibatch accuracy: 100.0%\n",
-      "Validation accuracy: 79.0%\n",
-      "Minibatch loss at step 1000: 0.534120\n",
+      "Validation accuracy: 78.8%\n",
+      "Minibatch loss at step 1000: 0.536494\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 79.5%\n",
+      "Minibatch loss at step 1500: 0.367460\n",
       "Minibatch accuracy: 100.0%\n",
       "Validation accuracy: 79.4%\n",
-      "Minibatch loss at step 1500: 0.367188\n",
+      "Minibatch loss at step 2000: 0.354722\n",
       "Minibatch accuracy: 100.0%\n",
-      "Validation accuracy: 79.4%\n",
-      "Minibatch loss at step 2000: 0.354245\n",
+      "Validation accuracy: 79.5%\n",
+      "Minibatch loss at step 2500: 0.347790\n",
       "Minibatch accuracy: 100.0%\n",
       "Validation accuracy: 79.3%\n",
-      "Minibatch loss at step 2500: 0.347761\n",
+      "Minibatch loss at step 3000: 0.343715\n",
       "Minibatch accuracy: 100.0%\n",
-      "Validation accuracy: 79.5%\n",
-      "Minibatch loss at step 3000: 0.343241\n",
-      "Minibatch accuracy: 100.0%\n",
-      "Validation accuracy: 79.5%\n",
-      "Test accuracy: 86.2%\n"
+      "Validation accuracy: 79.3%\n",
+      "Test accuracy: 86.0%\n"
      ]
     }
    ],
@@ -452,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -473,7 +474,7 @@
     "\n",
     "batch_size = 128\n",
     "hidden_nodes_num = 1024\n",
-    "keep_prob = 0.4\n",
+    "keep_prob = 0.9\n",
     "graph = tf.Graph()\n",
     "with graph.as_default():\n",
     "\n",
@@ -499,15 +500,13 @@
     "  weights = [hidden_layer_weights, out_weights]\n",
     "  biases = [hidden_layer_biases, out_biases]\n",
     "  \n",
-    "  # Training computation.\n",
+    "  # Training computation. Dropout\n",
     "  logits = forward_propagation_with_dropout(tf_train_dataset, weights, biases)\n",
-    "  # key code: L2 regularization\n",
-    "  l2_loss = tf.nn.l2_loss(weights[0]) + tf.nn.l2_loss(weights[1])  \n",
     "  \n",
     "  loss = tf.reduce_mean(\n",
     "    tf.nn.softmax_cross_entropy_with_logits(labels=tf_train_labels, logits=logits)\n",
-    "    ) + reglarziation_rate * l2_loss\n",
-    "  \n",
+    "    ) \n",
+    "    \n",
     "  # Optimizer.\n",
     "  optimizer = tf.train.GradientDescentOptimizer(0.5).minimize(loss)\n",
     "  \n",
@@ -519,42 +518,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "200000\n",
       "Initialized\n",
-      "Minibatch loss at step 0: 3606.531006\n",
-      "Minibatch accuracy: 10.2%\n",
-      "Validation accuracy: 40.2%\n",
-      "Minibatch loss at step 500: 21.554596\n",
-      "Minibatch accuracy: 81.2%\n",
-      "Validation accuracy: 83.7%\n",
-      "Minibatch loss at step 1000: 0.920880\n",
-      "Minibatch accuracy: 85.2%\n",
-      "Validation accuracy: 83.3%\n",
-      "Minibatch loss at step 1500: 0.939736\n",
+      "Minibatch loss at step 0: 323.325012\n",
+      "Minibatch accuracy: 12.5%\n",
+      "Validation accuracy: 35.5%\n",
+      "Minibatch loss at step 500: 10.583594\n",
       "Minibatch accuracy: 78.9%\n",
-      "Validation accuracy: 83.2%\n",
-      "Minibatch loss at step 2000: 0.807197\n",
+      "Validation accuracy: 79.8%\n",
+      "Minibatch loss at step 1000: 17.918354\n",
+      "Minibatch accuracy: 74.2%\n",
+      "Validation accuracy: 79.7%\n",
+      "Minibatch loss at step 1500: 5.107863\n",
+      "Minibatch accuracy: 77.3%\n",
+      "Validation accuracy: 81.5%\n",
+      "Minibatch loss at step 2000: 2.847394\n",
+      "Minibatch accuracy: 79.7%\n",
+      "Validation accuracy: 81.7%\n",
+      "Minibatch loss at step 2500: 4.260151\n",
+      "Minibatch accuracy: 84.4%\n",
+      "Validation accuracy: 82.5%\n",
+      "Minibatch loss at step 3000: 5.177354\n",
       "Minibatch accuracy: 83.6%\n",
-      "Validation accuracy: 83.2%\n",
-      "Minibatch loss at step 2500: 0.749921\n",
-      "Minibatch accuracy: 85.2%\n",
-      "Validation accuracy: 83.0%\n",
-      "Minibatch loss at step 3000: 0.785033\n",
-      "Minibatch accuracy: 85.2%\n",
-      "Validation accuracy: 82.8%\n",
-      "Test accuracy: 89.4%\n"
+      "Validation accuracy: 81.9%\n",
+      "Test accuracy: 88.5%\n"
      ]
     }
    ],
    "source": [
     "num_steps = 3001\n",
-    "\n",
+    "print(train_labels.shape[0])\n",
     "with tf.Session(graph=graph) as session:\n",
     "  tf.global_variables_initializer().run()\n",
     "  print(\"Initialized\")\n",
@@ -611,11 +611,201 @@
    "source": [
     "### Network Architecture \n",
     "\n",
-    "input layer: 28 * 28\n",
-    "hidden layers: 1024-300-50\n",
-    "output layer: 10\n",
-    "learning rate: linear decay of the learning rate or tf.train.exponential_decay\n",
-    "dropout keep prob: 0.5  "
+    "- input layer: 28 * 28\n",
+    "- hidden layers: 1024-300-50\n",
+    "- output layer: 10\n",
+    "- activation function: relu\n",
+    "- learning rate: linear decay of the learning rate or tf.train.exponential_decay\n",
+    "- dropout keep prob: 0.5\n",
+    "- batchsize:128\n",
+    "- optimizer: tf.train.MomentumOptimizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "def forward_propagation_with_one_dropout(features, weights, biases):\n",
+    "  \n",
+    "  hidden_layer_1 = tf.add(tf.matmul(features, weights[0]), biases[0])\n",
+    "  hidden_layer_1 = tf.nn.relu(hidden_layer_1)\n",
+    "    \n",
+    "  hidden_layer_2 = tf.add(tf.matmul(hidden_layer_1, weights[1]), biases[1])\n",
+    "  hidden_layer_2 = tf.nn.relu(hidden_layer_2)\n",
+    "    \n",
+    "  hidden_layer_3 = tf.add(tf.matmul(hidden_layer_2, weights[2]), biases[2])\n",
+    "  hidden_layer_3 = tf.nn.dropout(tf.nn.relu(hidden_layer_3), keep_prob=keep_prob)\n",
+    "  \n",
+    "  logits = tf.matmul(hidden_layer_3, weights[-1]) + biases[-1]\n",
+    "  return logits\n",
+    "\n",
+    "\n",
+    "def forward_propagation(features, weights, biases):\n",
+    "  \n",
+    "  hidden_layer_1 = tf.add(tf.matmul(features, weights[0]), biases[0])\n",
+    "  hidden_layer_1 = tf.nn.relu(hidden_layer_1)\n",
+    "    \n",
+    "  hidden_layer_2 = tf.add(tf.matmul(hidden_layer_1, weights[1]), biases[1])\n",
+    "  hidden_layer_2 = tf.nn.relu(hidden_layer_2)\n",
+    "    \n",
+    "  hidden_layer_3 = tf.add(tf.matmul(hidden_layer_2, weights[2]), biases[2])\n",
+    "  hidden_layer_3 = tf.nn.relu(hidden_layer_3)\n",
+    "  \n",
+    "  logits = tf.matmul(hidden_layer_3, weights[-1]) + biases[-1]\n",
+    "  return logits\n",
+    "\n",
+    "\n",
+    "def bias_variable(shape):\n",
+    "  \"\"\"\n",
+    "  由于使用的是ReLU神经元,\n",
+    "  用一个较小的正数来初始化偏置项，以避免神经元节点输出恒为0的问题（dead neurons）\n",
+    "  \"\"\"\n",
+    "  initial = tf.constant(0., shape=shape)\n",
+    "  return tf.Variable(initial)\n",
+    "\n",
+    "\n",
+    "def weight_variable(shape):\n",
+    "  \"\"\"\n",
+    "  权重在初始化时应该加入少量的噪声来打破对称性以及避免0梯度\n",
+    "  \"\"\"\n",
+    "  initial = tf.truncated_normal(shape, stddev=0.1)\n",
+    "  return tf.Variable(initial)\n",
+    "\n",
+    "batch_size = 128\n",
+    "hidden_nodes_num = [1024, 512, 30]\n",
+    "keep_prob = 0.5\n",
+    "graph = tf.Graph()\n",
+    "\n",
+    "with graph.as_default():\n",
+    "\n",
+    "  # Input data. For the training data, we use a placeholder that wibll be fed\n",
+    "  # at run time with a training minibatch.\n",
+    "  tf_train_dataset = tf.placeholder(tf.float32,\n",
+    "                                    shape=(batch_size, image_size * image_size))\n",
+    "  tf_train_labels = tf.placeholder(tf.float32, shape=(batch_size, num_labels))\n",
+    "  tf_valid_dataset = tf.constant(valid_dataset)\n",
+    "  tf_test_dataset = tf.constant(test_dataset)\n",
+    "  \n",
+    "  # Variables.\n",
+    "  # Weights and biases\n",
+    "  weights = []\n",
+    "  biases = []\n",
+    "  begin_num = image_size * image_size\n",
+    "  \n",
+    "  for i in hidden_nodes_num:\n",
+    "    end_num = i\n",
+    "    weights.append(weight_variable([begin_num, end_num]))\n",
+    "    biases.append(bias_variable([end_num]))\n",
+    "    begin_num = end_num\n",
+    "    \n",
+    "  weights.append(weight_variable([hidden_nodes_num[-1], num_labels]))\n",
+    "  biases.append(bias_variable([num_labels]))\n",
+    "\n",
+    "  # Training computation.\n",
+    "  logits = forward_propagation_with_one_dropout(tf_train_dataset, weights, biases)\n",
+    "  \n",
+    "  loss = tf.reduce_mean(\n",
+    "    tf.nn.softmax_cross_entropy_with_logits(labels=tf_train_labels, logits=logits))\n",
+    "  \n",
+    "  # Optimizer.\n",
+    "  \"\"\"\n",
+    "  decayed_learning_rate = learning_rate *\n",
+    "                        decay_rate ^ (global_step / decay_steps)\n",
+    "  \"\"\"\n",
+    "\n",
+    "  global_step = tf.Variable(0)  # count the number of steps taken.\n",
+    "  learning_rate = tf.train.exponential_decay(0.1, global_step, decay_steps=1000, decay_rate=0.7, staircase=True)\n",
+    "  optimizer = tf.train.MomentumOptimizer(learning_rate, momentum=0.6).minimize(loss, global_step=global_step)\n",
+    "  # optimizer = tf.train.GradientDescentOptimizer(0.5).minimize(loss)\n",
+    "  # Predictions for the training, validation, and test data.\n",
+    "  train_prediction = tf.nn.softmax(logits)\n",
+    "  valid_prediction = tf.nn.softmax(forward_propagation(tf_valid_dataset, weights, biases))\n",
+    "  test_prediction = tf.nn.softmax(forward_propagation(tf_test_dataset, weights, biases))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialized\n",
+      "Minibatch loss at step 0: 3.079024\n",
+      "Minibatch accuracy: 10.2%\n",
+      "Validation accuracy: 13.2%\n",
+      "Minibatch loss at step 500: 0.641496\n",
+      "Minibatch accuracy: 77.3%\n",
+      "Validation accuracy: 83.6%\n",
+      "Minibatch loss at step 1000: 0.515654\n",
+      "Minibatch accuracy: 82.8%\n",
+      "Validation accuracy: 85.0%\n",
+      "Minibatch loss at step 1500: 0.609164\n",
+      "Minibatch accuracy: 82.0%\n",
+      "Validation accuracy: 86.2%\n",
+      "Minibatch loss at step 2000: 0.375060\n",
+      "Minibatch accuracy: 88.3%\n",
+      "Validation accuracy: 86.9%\n",
+      "Minibatch loss at step 2500: 0.373803\n",
+      "Minibatch accuracy: 89.1%\n",
+      "Validation accuracy: 87.3%\n",
+      "Minibatch loss at step 3000: 0.443877\n",
+      "Minibatch accuracy: 87.5%\n",
+      "Validation accuracy: 87.6%\n",
+      "Minibatch loss at step 3500: 0.387128\n",
+      "Minibatch accuracy: 84.4%\n",
+      "Validation accuracy: 87.7%\n",
+      "Minibatch loss at step 4000: 0.398968\n",
+      "Minibatch accuracy: 87.5%\n",
+      "Validation accuracy: 87.9%\n",
+      "Minibatch loss at step 4500: 0.528143\n",
+      "Minibatch accuracy: 86.7%\n",
+      "Validation accuracy: 88.0%\n",
+      "Minibatch loss at step 5000: 0.500311\n",
+      "Minibatch accuracy: 83.6%\n",
+      "Validation accuracy: 88.2%\n",
+      "Minibatch loss at step 5500: 0.316791\n",
+      "Minibatch accuracy: 89.1%\n",
+      "Validation accuracy: 88.4%\n",
+      "Minibatch loss at step 6000: 0.410300\n",
+      "Minibatch accuracy: 85.9%\n",
+      "Validation accuracy: 88.4%\n",
+      "Test accuracy: 94.1%\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_steps = 6001\n",
+    "\n",
+    "with tf.Session(graph=graph) as session:\n",
+    "  tf.global_variables_initializer().run()\n",
+    "  print(\"Initialized\")\n",
+    "  for step in range(num_steps):\n",
+    "    # Pick an offset within the training data, which has been randomized.\n",
+    "    # Note: we could use better randomization across epochs.\n",
+    "    offset = (step * batch_size) % (train_labels.shape[0] - batch_size)\n",
+    "    # Generate a minibatch.\n",
+    "    batch_data = train_dataset[offset:(offset + batch_size), :]\n",
+    "    batch_labels = train_labels[offset:(offset + batch_size), :]\n",
+    "    # Prepare a dictionary telling the session where to feed the minibatch.\n",
+    "    # The key of the dictionary is the placeholder node of the graph to be fed,\n",
+    "    # and the value is the numpy array to feed to it.\n",
+    "    feed_dict = {tf_train_dataset : batch_data, tf_train_labels : batch_labels}\n",
+    "    _, l, predictions = session.run(\n",
+    "      [optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
+    "    if (step % 500 == 0):\n",
+    "      print(\"Minibatch loss at step %d: %f\" % (step, l))\n",
+    "    \n",
+    "      print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
+    "      print(\"Validation accuracy: %.1f%%\" % accuracy(\n",
+    "        valid_prediction.eval(), valid_labels))\n",
+    "  print(\"Test accuracy: %.1f%%\" % accuracy(test_prediction.eval(), test_labels))"
    ]
   }
  ],
